@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.1.1.1 2005/11/04 07:21:24 rillig Exp $
+# $NetBSD: Makefile,v 1.2 2005/11/08 20:10:08 rillig Exp $
 
-DISTNAME=		Coin-2.2.1
+DISTNAME=		Coin-2.4.4
 CATEGORIES=		graphics
-MASTER_SITES=		ftp://ftp.coin3d.org/pub/coin/src/
+MASTER_SITES=		http://ftp.coin3d.org/coin/src/all/
 
 MAINTAINER=		tech-pkg@NetBSD.org
 HOMEPAGE=		http://www.coin3d.org/
